--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <br>
         
         <div class="question">
-            What is the capital of France?
+            Which civilization is known for the Great Bath?
         </div>
-
+      
         <div class="options">
-            <div class="option" >Berlin</div>
-            <div class="option">Madrid</div>
-            <div class="option">Paris</div>
-            <div class="option">Rome Lorem ipsum dolor, sit amet consectetur adipisicing elit. !</div>
+            <div class="option" >Mesopotamian</div>
+            <div class="option">Egyptian</div>
+            <div class="option">Harappan</div>
+            <div class="option">Chinese</div>
         </div>
 
         <button class="save-btn" id="saveBtn">Save</button>
