--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </div>
       
         <div class="options">
-            <div class="option" >Mesopotamian</div>
-            <div class="option">Egyptian</div>
-            <div class="option">Harappan</div>
-            <div class="option">Chinese</div>
+            <div class="option" ><strong  contenteditable="false">A.</strong>Mesopotamian</div>
+            <div class="option"><strong contenteditable="false">B.</strong>Egyptian</div>
+            <div class="option"><strong contenteditable="false">C.</strong>Harappan</div>
+            <div class="option"><strong contenteditable="false">D.</strong>Chinese</div>
         </div>
 
         <button class="save-btn" id="saveBtn">Save</button>
